# server-sent-events-sample

./: Cargo.toml  LICENSE  README.md  client.js  index.html
src/: main.rs
