[package]
name = "sse-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
actix-rt = "2.9.0"
actix-files = "0.6.2"
actix-cors = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
async-stream = "0.3"
rand = "0.8"
